<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBackground"
    android:textAlignment="center">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="@dimen/menu_activity_horizontal_margin"
            app:contentInsetStart="@dimen/menu_activity_horizontal_margin">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:background="#000000">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_arrow_back" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/menu_title"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_title_toolbar"
                        android:textStyle="normal|bold" />

                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/menu_activity_horizontal_margin"
        android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/menu_margin_top"
                android:orientation="horizontal"
                android:id="@+id/llShare">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
                    app:srcCompat="@drawable/icon_share" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/menu_shate"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_menu_items"
                    android:layout_marginTop="@dimen/menu_margin_top_text_items"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/menu_margin_between_items"
                android:id="@+id/llInfo"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
                    app:srcCompat="@drawable/icon_info" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/menu_info"
                    android:textColor="@color/textColorPrimary"
                    android:layout_marginTop="@dimen/menu_margin_top_text_items"
                    android:textSize="@dimen/text_size_menu_items" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/menu_margin_between_items"
                android:orientation="horizontal"
                android:id="@+id/llStar">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
                    app:srcCompat="@drawable/icon_star" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/menu_star"
                    android:textColor="@color/textColorPrimary"
                    android:layout_marginTop="@dimen/menu_margin_top_text_items"
                    android:textSize="@dimen/text_size_menu_items" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/menu_margin_between_items"
                android:orientation="horizontal"
                android:id="@+id/llMoney">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
                    app:srcCompat="@drawable/icon_money" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/menu_margin_top_text_items"
                    android:text="@string/menu_money"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_menu_items" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/menu_margin_between_items"
                android:orientation="horizontal"
                android:id="@+id/llEmail">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
                    app:srcCompat="@drawable/icon_email" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/menu_margin_top_text_items"
                    android:text="@string/menu_email"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_menu_items" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

