<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBackground"
    android:textAlignment="center">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="@dimen/menu_activity_horizontal_margin"
            app:contentInsetStart="@dimen/menu_activity_horizontal_margin">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:background="#000000">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/space_between_titles_in_toolbar"
                        android:text="@string/play_title"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_title_toolbar"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tvSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:text="@string/play_subtitle"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/text_size_subtitle_toolbar" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_share" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/menu_activity_horizontal_margin"
        android:layout_marginRight="@dimen/menu_activity_horizontal_margin"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/cd_logo_new_white" />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ready_to_play"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_title_state" />

            <TextView
                android:id="@+id/tvSubState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtext_ready_to_play"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_subtitle_state" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/ivPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="visible"
                    app:srcCompat="@drawable/play" />

                <ImageView
                    android:id="@+id/ivPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/pause" />

                <ProgressBar
                    android:id="@+id/pb"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivYouTube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_youtube" />

                <ImageView
                    android:id="@+id/ivInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_instagram" />

                <ImageView
                    android:id="@+id/ivVK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/icon_vk" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivUnLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:srcCompat="@drawable/icon_heart" />

                    <ImageView
                        android:id="@+id/ivLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/icon_like" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


